Fixing portfolio images

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
             <div class="project">
                 <h4>Quote Generator</h4>
-                <img src="img/parrilla.png" alt="">
+                <img src="img/quote-generator.png" alt="">
                 <div class="">
                     <a class="primary-btn" href="https://bryanh24.github.io/quoteGenerator/">View Project</a>
                     <a class="secondary-btn" href="https://github.com/Bryanh24/quoteGenerator">View Code</a>
@@ -173,7 +173,7 @@
             </div>
             <div class="project">
                 <h4>Infinite Scroll</h4>
-                <img src="img/parrilla.png" alt="">
+                <img src="img/infinite-scroll.png" alt="">
                 <div class="">
                     <a class="primary-btn" href="https://bryanh24.github.io/Infinite-Scroll/">View Project</a>
                     <a class="secondary-btn" href="https://github.com/Bryanh24/Infinite-Scroll">View Code</a>
@@ -181,18 +181,10 @@
             </div>
             <div class="project">
                 <h4>Joke Teller</h4>
-                <img src="img/parrilla.png" alt="">
+                <img src="img/joke-teller.png" alt="">
                 <div class="">
                     <a class="primary-btn" href="https://bryanh24.github.io/Joke-Teller/">View Project</a>
                     <a class="secondary-btn" href="https://github.com/Bryanh24/Joke-Teller">View Code</a>
-                </div>
-            </div>
-            <div class="project">
-                <h4>La Parrilla Burgers</h4>
-                <img src="img/parrilla.png" alt="">
-                <div class="">
-                    <a class="primary-btn" href="">View</a>
-                    <a class="secondary-btn" href="">Repository</a>
                 </div>
             </div>
         </div>
